<resources>
    <string name="app_name">Task Manager</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="due_date_label">Due Date: Not Set</string>
    <string name="pick_due_date">Pick Due Date</string>
    <string name="save_task">Save Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="tasks">Tasks</string>
</resources>
